roguelearn-quest-api/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: roguelearn-quest-ingress
  labels:
    app: roguelearn-quest-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - quest.api.roguelearn.site
    secretName: roguelearn-quest-tls
  rules:
  - host: quest.api.roguelearn.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: roguelearn-quest-service
            port:
              number: 80
